--- a/assets/less/keyframes.less
+++ b/assets/less/keyframes.less
@@ -109,6 +109,12 @@
 }
 /* Contact Page */
 
+#contact-cover {
+    .animation-duration(1s);
+    .animation-delay(1s);
+    .animation-iteration-count(none);
+}
+
 #contactbanner {
     .animation-duration(1s);
     .animation-delay(1s);
@@ -117,13 +123,13 @@
 
 #contactbannerone {
     .animation-duration(1s);
-    .animation-delay(1s);
+    .animation-delay(1.2s);
     .animation-iteration-count(none);
 }
 
 #contactbannertwo {
     .animation-duration(1s);
-    .animation-delay(1s);
+    .animation-delay(1.3s);
     .animation-iteration-count(none);
 }
 
