--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -91,7 +91,7 @@ crumb h1 {
 
 .paper {
 	padding: 20px 10px;
-	margin: 40px 0px 20px 0px;
+	margin: 20px 0px 20px 0px;
 }
 
 a.plus {
@@ -122,6 +122,11 @@ a.plus {
 	text-align: left;
 }
 
+.paper-banner {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 .paper-banner a {
 	display: block;
 	float: none;
@@ -133,7 +138,7 @@ a.plus {
 }
 
 .paper-banner a {
-	padding-top: 4px;
+	//padding-top: 4px;
 }
 
 .paper-banner .banner .resumeicons a, .paper-banner .banner .contactmeicons a {
@@ -208,11 +213,19 @@ ul.contact li {
 	border-radius: 8px;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
-	color: #fff;
-	border: solid 1px #d0d0d0;
-	background-color: #fff;
+	color: @white;
+	border: solid 1px rgba(0,0,0,.15);
+	.box-shadow(inset 0 1px 1px 0px rgba(255,255,255,.12), 0 1px 1px 0px rgba(0,0,0,.5));
+	//.box-shadow(inset 0 1px 1px 0 rgba(255,255,255,.1), 0 1px 1px 0px rgba(0,0,0,.5));
+	//.box-shadow(inset 0 0px 1px 1px rgba(255,255,255,.04));
+	background-color: darken(@slateLight, 4%);
 	display: inline-block;
 	margin: 10px 10px 0;
+	.transition(all 200ms );
+	&:hover, &:active, &.active, &:focus {
+		.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.5), 0 1px 1px 0px rgba(255,255,255,.1));
+		background-color: darken(@slateLight, 5%);
+	}
 }
 
 ul.contact li span {
@@ -349,6 +362,8 @@ margin-bottom: 10px;
 
 .canvas, .canvas-banner {
 	margin-top: 20px;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 
 .portfoliofeature h2 {
@@ -546,6 +561,12 @@ margin: 0px 10px 0px 10px;
 	font-size: @baseFontSize + 1;
 }
 
+/* Portfolio Page */
+.canvas, .canvas-banner {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 /* Contact Icons */
 ul.contact {
 	list-style: none;
@@ -561,11 +582,19 @@ ul.contact li {
 	border-radius: 8px;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
-	color: #fff;
-	border: solid 1px #d0d0d0;
-	background-color: #fff;
+	color: @white;
+	border: solid 1px rgba(0,0,0,.15);
+	.box-shadow(inset 0 1px 1px 0px rgba(255,255,255,.12), 0 1px 1px 0px rgba(0,0,0,.5));
+	//.box-shadow(inset 0 1px 1px 0 rgba(255,255,255,.1), 0 1px 1px 0px rgba(0,0,0,.5));
+	//.box-shadow(inset 0 0px 1px 1px rgba(255,255,255,.04));
+	background-color: darken(@slateLight, 4%);
 	display: inline-block;
 	margin: 10px 10px 0;
+	.transition(all 200ms );
+	&:hover, &:active, &.active, &:focus {
+		.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.5), 0 1px 1px 0px rgba(255,255,255,.1));
+		background-color: darken(@slateLight, 5%);
+	}
 }
 
 ul.contact li span {
