--- a/assets/css/basic-layout.css
+++ b/assets/css/basic-layout.css
@@ -35,18 +35,35 @@
 }
 body,
 #viewport,
-#page,
-.wrapper,
-.push {
+#page {
   background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
   overflow-y: visible;
+}
+.push {
+  background: transparent;
 }
 .wrapper {
   background: transparent url("/assets/img/bg-lighting@1x.jpg") repeat-x;
 }
+header {
+  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+}
 @media (max-width: 767px) {
+  body {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  header {
+    -webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+    -moz-box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+    box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+  }
   .wrapper {
-    background: #000000 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
+    background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
@@ -54,9 +71,8 @@ body,
   body,
   #viewport,
   #page,
-  .wrapper,
-  .push {
-    background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
+  .wrapper {
+    background: #612816 url("/assets/img/bg2-wood@2x.jpg") repeat 0 0;
     background-size: 512px 511px;
   }
 }
