--- a/assets/less/basic-layout.less
+++ b/assets/less/basic-layout.less
@@ -2,19 +2,35 @@
 @import "values.less"; // Modify this for custom colors, font-sizes, etc
 @import "mix.less";
 
-body, #viewport, #page,.wrapper, .push {
+body, #viewport, #page {
 	background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
 	overflow-y: visible;
+	//.backface-visibility (hidden);
+}
+
+.push {
+	background: transparent;
+	//.backface-visibility(hidden);
 }
 
 .wrapper {
 	background: transparent url("/assets/img/bg-lighting@1x.jpg") repeat-x;
-	//.backface-visibility(hidden);
 }
 
+header {
+	.box-shadow(0 3px 7px rgba(0,0,0,.2));
+}
 @media (max-width: 767px) {
+	body {
+		.backface-visibility (hidden);
+	}
+	
+	header {
+		.box-shadow(0 0px 0px rgba(0,0,0,0));
+	}
+	
 	.wrapper {
-	background: black url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
+		background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
 	}
 }
 
@@ -22,8 +38,8 @@ body, #viewport, #page,.wrapper, .push {
 only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
 /* Styles */
-body, #viewport, #page,.wrapper, .push {
-	background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
-	background-size: 512px 511px;
+	body, #viewport, #page,.wrapper {
+		background: #612816 url("/assets/img/bg2-wood@2x.jpg") repeat 0 0;
+		background-size: 512px 511px;
 	}
 }
