--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -221,8 +221,9 @@ ul.contact li {
 	background-color: darken(@slateLight, 4%);
 	display: inline-block;
 	margin: 10px 10px 0;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	.transition(all 200ms );
-	&:hover, &:active, &.active, &:focus {
+	&:hover, &:focus {
 		.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.5), 0 1px 1px 0px rgba(255,255,255,.1));
 		background-color: darken(@slateLight, 5%);
 	}
@@ -590,8 +591,9 @@ ul.contact li {
 	background-color: darken(@slateLight, 4%);
 	display: inline-block;
 	margin: 10px 10px 0;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	.transition(all 200ms );
-	&:hover, &:active, &.active, &:focus {
+	&:hover, &:focus {
 		.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.5), 0 1px 1px 0px rgba(255,255,255,.1));
 		background-color: darken(@slateLight, 5%);
 	}
