--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -404,7 +404,7 @@ body.menu-open a.plus {
         text-shadow: 0 1px 0 rgba(0, 0, 0, .6);
         .transition(all .3s linear);
         -webkit-tap-highlight-color: rgba(0,0,0,0);
-        &:hover, &:active, &.active, &:focus {
+        &:hover {
         .box-shadow(inset 0px 0px 10px 1px rgba(0, 0, 0, .6));
         background-color: rgba(0,0,0, .20);
         }
@@ -412,7 +412,7 @@ body.menu-open a.plus {
         
     #menu ul li::first-child, #menu ul li::last-child {
     	.box-shadow(inset 0px -1px 0px 0px rgba(0, 0, 0, .2), inset 0px 1px 0px 0px rgba(255, 255, 255, .04));
-    	&:hover, &:active, &.active, &:focus {
+    	&:hover {
         .box-shadow(inset 0px 0px 10px 1px rgba(0, 0, 0, .4));
         }
     }
