--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -818,8 +818,7 @@ a.btn-cta {
     -o-transition: all 200ms;
     transition: all 200ms;
   }
-  ul.contact li:hover,
-  ul.contact li:focus {
+  ul.contact li:hover {
     -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     -moz-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
@@ -1139,8 +1138,7 @@ a.btn-cta {
     -o-transition: all 200ms;
     transition: all 200ms;
   }
-  ul.contact li:hover,
-  ul.contact li:focus {
+  ul.contact li:hover {
     -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     -moz-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
