--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,10 +490,7 @@ body.menu-open a.plus {
   transition: all 0.3s linear;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-#menu ul li:hover,
-#menu ul li:active,
-#menu ul li.active,
-#menu ul li:focus {
+#menu ul li:hover {
   -webkit-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
   box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
@@ -506,13 +503,7 @@ body.menu-open a.plus {
   box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.04);
 }
 #menu ul li::first-child:hover,
-#menu ul li::last-child:hover,
-#menu ul li::first-child:active,
-#menu ul li::last-child:active,
-#menu ul li::first-child.active,
-#menu ul li::last-child.active,
-#menu ul li::first-child:focus,
-#menu ul li::last-child:focus {
+#menu ul li::last-child:hover {
   -webkit-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
   box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
@@ -1630,8 +1621,7 @@ p.contactlead {
     -o-transition: all 200ms;
     transition: all 200ms;
   }
-  ul.contact li:hover,
-  ul.contact li:focus {
+  ul.contact li:hover {
     -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     -moz-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
@@ -1951,8 +1941,7 @@ p.contactlead {
     -o-transition: all 200ms;
     transition: all 200ms;
   }
-  ul.contact li:hover,
-  ul.contact li:focus {
+  ul.contact li:hover {
     -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     -moz-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
