--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2137,8 +2137,7 @@ a.backtotop:hover {
     -o-transition: all 200ms;
     transition: all 200ms;
   }
-  ul.contact li:hover,
-  ul.contact li:focus {
+  ul.contact li:hover {
     -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     -moz-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
@@ -2458,8 +2457,7 @@ a.backtotop:hover {
     -o-transition: all 200ms;
     transition: all 200ms;
   }
-  ul.contact li:hover,
-  ul.contact li:focus {
+  ul.contact li:hover {
     -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     -moz-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
