--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -223,7 +223,7 @@ ul.contact li {
 	margin: 10px 10px 0;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	.transition(all 200ms );
-	&:hover, &:focus {
+	&:hover {
 		.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.5), 0 1px 1px 0px rgba(255,255,255,.1));
 		background-color: darken(@slateLight, 5%);
 	}
@@ -593,7 +593,7 @@ ul.contact li {
 	margin: 10px 10px 0;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	.transition(all 200ms );
-	&:hover, &:focus {
+	&:hover {
 		.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.5), 0 1px 1px 0px rgba(255,255,255,.1));
 		background-color: darken(@slateLight, 5%);
 	}
