--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,15 +307,16 @@ nav .active a:focus {
 }
 */
 .crumb h1 {
-  font-size: 15px;
-  line-height: 15px;
-  font-weight: 400;
-  color: #eeeeee;
-  display: none;
+  font-size: 24px;
+  line-height: 20px;
+  font-weight: 600;
+  color: #ffffff;
+  display: inline-block;
   padding: 6px 0 0 0;
-  margin: 0 10px 0 0;
+  margin: 30px 0px 0 0;
   text-transform: uppercase;
   letter-spacing: .08em;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 .crumb small {
   font-size: 15px;
@@ -329,9 +330,6 @@ hr {
   margin: 5px 0;
   border-top: 1px solid #252525;
   border-bottom: 1px solid #313131;
-}
-hr + .crumb + hr {
-  margin-bottom: 20px;
 }
 /* Viewport Slideout */
 body.menu-open #page {
@@ -377,9 +375,10 @@ a.plus {
   background-repeat: no-repeat;
   height: 22px;
   width: 22px;
-  top: 10px;
-  right: 5px;
-  padding: 5px;
+  top: 0px;
+  right: -10px;
+  padding: 15px;
+  padding-bottom: 14px;
   background-position: center;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-backface-visibility: hidden;
@@ -842,7 +841,7 @@ ul.headshots li img {
 .paper {
   padding: 20px 30px;
   height: auto;
-  margin: 80px 40px 20px 40px;
+  margin: 20px 40px 20px 40px;
   line-height: 15px;
   color: #000000;
   background: #ffffff;
@@ -987,7 +986,7 @@ ul.headshots li img {
   height: auto;
   text-align: center;
   margin-bottom: 20px;
-  margin-top: 60px;
+  margin-top: 20px;
   margin-left: 40px;
   margin-right: 40px;
   line-height: 15px;
@@ -1045,6 +1044,7 @@ section#letterhead p,
 ul.contact {
   list-style: none;
   margin: 0 auto;
+  margin-top: 5px;
 }
 ul.contact li {
   display: inline-block;
@@ -1446,7 +1446,7 @@ p.contactlead {
   .crumb h1 {
     font-size: 18px;
     padding: 6px 0 0 0;
-    margin: 0px 0;
+    margin: 10px 0 0 0;
     text-transform: uppercase;
     letter-spacing: .08em;
     display: block;
@@ -1487,7 +1487,7 @@ p.contactlead {
   }
   .paper {
     padding: 20px 10px;
-    margin: 20px 0px 20px 0px;
+    margin: 10px 0px 20px 0px;
   }
   a.plus {
     display: block;
@@ -1740,7 +1740,7 @@ p.contactlead {
   ------------------------------------ */
   .canvas,
   .canvas-banner {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 0px;
     margin-right: 0px;
   }
