--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -51,7 +51,7 @@ header a.brand {
 .crumb h1 {
 	font-size: @baseFontSize + 3;
 	padding: 6px 0 0 0;
-	margin: 0px 0;
+	margin: 10px 0 0 0;
 	text-transform: uppercase;
 	letter-spacing: .08em;
 	display: block; 
@@ -91,7 +91,7 @@ crumb h1 {
 
 .paper {
 	padding: 20px 10px;
-	margin: 20px 0px 20px 0px;
+	margin: 10px 0px 20px 0px;
 }
 
 a.plus {
@@ -362,7 +362,7 @@ margin-bottom: 10px;
 ------------------------------------ */
 
 .canvas, .canvas-banner {
-	margin-top: 20px;
+	margin-top: 10px;
 	margin-left: 0px;
 	margin-right: 0px;
 }
