--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,12 +210,12 @@ header .container {
 header a.brand {
   font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: relative;
-  display: inline-block;
+  display: block;
   margin-top: 20px;
   font-size: 22px;
   font-weight: 700;
   text-transform: uppercase;
-  text-align: left;
+  float: left;
   color: #9a9795;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
@@ -375,10 +375,9 @@ a.plus {
   background-repeat: no-repeat;
   height: 22px;
   width: 22px;
-  top: 0px;
-  right: -10px;
-  padding: 15px;
-  padding-bottom: 14px;
+  top: 10px;
+  right: 5px;
+  padding: 5px;
   background-position: center;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-backface-visibility: hidden;
