--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -555,7 +555,8 @@ margin: 0px 10px 0px 10px;
 }
 
 #content .greeting h2 {
-	font-size: @baseFontSize + 15;
+	font-size: @baseFontSize + 10;
+	line-height: @baseLineHeight;
 }
 
 #content .greeting p {
