--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1901,7 +1901,8 @@ p.contactlead {
     margin-top: 10%;
   }
   #content .greeting h2 {
-    font-size: 30px;
+    font-size: 25px;
+    line-height: 20px;
   }
   #content .greeting p {
     font-size: 16px;
