--- a/assets/less/pong.less
+++ b/assets/less/pong.less
@@ -9,9 +9,9 @@ section#pong-intro h2 {
 	font-family: @spFontFamily;
 	font-size: @baseFontSize + 5;
 	line-height: @baseLineHeight;
-	font-weight: 400;
-	letter-spacing: .1em;
-	color: @white;
+	font-weight: 600;
+	//letter-spacing: .1em;
+	color: @dirtyWhite;
 	text-align: center;
 	padding: 20px 0 5px 0px;
 	text-transform: uppercase;
@@ -43,7 +43,7 @@ text-transform: uppercase;
 }
 
 #sidebar h3 { 
-color: @gray;
+color: @white;
 font-weight: 400;
 letter-spacing: .1em;
 font-size: @baseFontSize + 1;
@@ -63,6 +63,7 @@ text-align: right;
 }
 #sidebar li {
 	list-style: none;
+	color: @grayLight;
 }
 #sidebar li span {
 	color: @accentColor;
@@ -82,6 +83,7 @@ text-align: right;
 	display: inline-block;
 	position: relative;
 	font-size: @baseFontSize - 2;
+	color: @grayLight;
 }
 #sidebar .settings input { 
 	vertical-align: middle;
@@ -106,7 +108,7 @@ text-align: right;
 	position: relative;
 	width: 640px; height: 480px;
 	text-align: center;
-	margin-top: 20px;
+	margin-top: 0px;
 	margin-bottom: 10px;
 }
 
