--- a/assets/css/pong.css
+++ b/assets/css/pong.css
@@ -46,9 +46,8 @@ section#pong-intro h2 {
   font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   line-height: 20px;
-  font-weight: 400;
-  letter-spacing: .1em;
-  color: #ffffff;
+  font-weight: 600;
+  color: #9a9795;
   text-align: center;
   padding: 20px 0 5px 0px;
   text-transform: uppercase;
@@ -80,7 +79,7 @@ section#pong-intro p {
   text-transform: uppercase;
 }
 #sidebar h3 {
-  color: #555555;
+  color: #ffffff;
   font-weight: 400;
   letter-spacing: .1em;
   font-size: 16px;
@@ -99,6 +98,7 @@ section#pong-intro p {
 }
 #sidebar li {
   list-style: none;
+  color: #999999;
 }
 #sidebar li span {
   color: #1b7ad6;
@@ -117,6 +117,7 @@ section#pong-intro p {
   display: inline-block;
   position: relative;
   font-size: 13px;
+  color: #999999;
 }
 #sidebar .settings input {
   vertical-align: middle;
@@ -142,7 +143,7 @@ section#pong-intro p {
   width: 640px;
   height: 480px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 10px;
 }
 #no-mobile {
