--- a/assets/css/basic-layout.css
+++ b/assets/css/basic-layout.css
@@ -68,6 +68,12 @@ header {
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
   /* Styles */
+  .wrapper {
+    background: transparent url("/assets/img/bg-lighting@2x.jpg") repeat-x;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) and (max-width: 480px) {
+  /* Styles */
   body,
   #viewport,
   #page,
