--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1985,11 +1985,25 @@ p.contactlead {
     border-radius: 8px;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
-    color: #fff;
-    border: solid 1px #d0d0d0;
-    background-color: #fff;
+    color: #ffffff;
+    border: solid 1px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: inset 0 1px 1px 0px rgba(255, 255, 255, 0.12), 0 1px 1px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: inset 0 1px 1px 0px rgba(255, 255, 255, 0.12), 0 1px 1px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 1px 1px 0px rgba(255, 255, 255, 0.12), 0 1px 1px 0px rgba(0, 0, 0, 0.5);
+    background-color: #262626;
     display: inline-block;
     margin: 10px 10px 0;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-transition: all 200ms;
+    -moz-transition: all 200ms;
+    -o-transition: all 200ms;
+    transition: all 200ms;
+  }
+  ul.contact li:hover {
+    -webkit-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
+    -moz-box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
+    box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 1px 1px 0px rgba(255, 255, 255, 0.1);
+    background-color: #232323;
   }
   ul.contact li span {
     display: none;
