--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2413,6 +2413,10 @@ a.backtotop:hover {
   .paper {
     padding: 20px 30px;
   }
+  .paper-banner {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
   /* Home Page Style Adjustments */
   #content .greeting {
     margin-top: 10%;
@@ -2555,7 +2559,7 @@ a.backtotop:hover {
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   /* Styles */
   nav a {
-    margin: 0px 20px 0px 20px;
+    margin: 0px 10px 0px 10px;
   }
 }
 /* Slidely Wide Desktop Display
