--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -549,6 +549,11 @@ margin: 0px 10px 0px 10px;
 	padding:20px 30px;
 }
 
+.paper-banner {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 /* Home Page Style Adjustments */
 #content .greeting {
 	margin-top: 10%;
@@ -709,7 +714,7 @@ and (max-device-width : 1024px)
 and (orientation : portrait) {
 /* Styles */
 nav a {
-margin: 0px 20px 0px 20px;
+margin: 0px 10px 0px 10px;
 }
 
 }
