--- a/assets/less/basic-layout.less
+++ b/assets/less/basic-layout.less
@@ -15,15 +15,13 @@ body, #viewport, #page {
 
 .wrapper {
 	background: transparent url("/assets/img/bg-lighting@1x.jpg") repeat-x;
+	
 }
 
 header {
-	.box-shadow(0 3px 7px rgba(0,0,0,.2));
+	//.box-shadow(0 3px 7px rgba(0,0,0,.2));
 }
 @media (max-width: 767px) {
-	body {
-		.backface-visibility (hidden);
-	}
 	
 	header {
 		.box-shadow(0 0px 0px rgba(0,0,0,0));
@@ -36,20 +34,21 @@ header {
 
 @media 
 only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-	/* Styles */
-	.wrapper {
-		background: transparent url("/assets/img/bg-lighting@2x.jpg") repeat-x;
-	}
-}
-
-@media 
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5)
 and (max-width: 480px) {
 /* Styles */
 	body, #viewport, #page,.wrapper {
 		background: #612816 url("/assets/img/bg2-wood@2x.jpg") repeat 0 0;
 		background-size: 512px 511px;
+	}
+}
+
+@media 
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5)
+and (max-width: 768px) {
+	/* Styles */
+	.wrapper {
+		background: transparent url("/assets/img/bg-lighting@2x.jpg") repeat-x;
 	}
 }
