--- a/assets/css/basic-layout.css
+++ b/assets/css/basic-layout.css
@@ -65,7 +65,7 @@ body,
     background-size: 512px 511px;
   }
 }
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) and (max-width: 768px) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) and (min-width: 768px) {
   /* Styles */
   .wrapper {
     background: transparent url("/assets/img/bg-lighting@2x.jpg") repeat-x;
