--- a/assets/less/basic-layout.less
+++ b/assets/less/basic-layout.less
@@ -46,7 +46,7 @@ and (max-width: 480px) {
 @media 
 only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5)
-and (max-width: 768px) {
+and (min-width: 768px) {
 	/* Styles */
 	.wrapper {
 		background: transparent url("/assets/img/bg-lighting@2x.jpg") repeat-x;
