--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -600,6 +600,10 @@ img.so-skype {
 	position: relative;
 }
 
+.hero-banner .greeting a {
+	color: @white;
+}
+
 section#intro {
 	background: @slateLight;
 	border: 1px solid @printerLighter;
