--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -555,6 +555,41 @@ img.so-skype {
 	.backface-visibility(hidden);
 }
 
+section#content {
+	text-align: center;
+	color: @accentColor;
+	width: 100%;
+	position: relative;
+	padding-top: 10px;
+	padding-bottom: 0px;
+	background: transparent;
+	position: relative;
+	overflow: hidden;
+	//background: @white url(@bgWood1x) repeat-x;
+	//border-top: 1px solid @grayDark;
+	//border-bottom: 1px solid @grayDark;
+	.backface-visibility(hidden);
+}
+
+section#content::after {
+	content: "";
+	display: block;
+	position: absolute;
+	overflow: hidden;
+	top:0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	background: @white url(@bgWood1x) repeat-x;
+	.box-shadow(inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2));
+	.backface-visibility(hidden);
+}
+
+section#content .container {
+	position: relative;
+	z-index: 2;
+}
+
 #content .greeting {
 	text-align: left;
 	margin-top: 25%;
@@ -630,35 +665,6 @@ section#intro .greeting p {
 section#intro p.mute {
 	color: @grayLight;
 	//text-align: center;
-}
-
-section#content::before {
-	content: "";
-	display: block;
-	position: absolute;
-	overflow: hidden;
-	top:0;
-	left:0;
-	right: 0;
-	bottom: 0;
-	background: @white url(@bgWood1x) repeat-x;
-	.box-shadow(inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2));
-	.backface-visibility(hidden);
-}
-section#content {
-	text-align: center;
-	color: @accentColor;
-	width: 100%;
-	position: relative;
-	padding-top: 10px;
-	padding-bottom: 0px;
-	background: transparent;
-	position: relative;
-	overflow: hidden;
-	//background: @white url(@bgWood1x) repeat-x;
-	//border-top: 1px solid @grayDark;
-	//border-bottom: 1px solid @grayDark;
-	.backface-visibility(hidden);
 }
 
 #content h2 {
