--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -398,7 +398,7 @@ body.menu-open a.plus {
         font-size: 16px;
         color: @tan;
         text-shadow: 0 1px 0 rgba(0, 0, 0, .6);
-        .transition(all .3s linear);
+        //.transition(all .3s linear);
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         &:hover {
         .box-shadow(inset 0px 0px 10px 1px rgba(0, 0, 0, .6));
@@ -422,7 +422,7 @@ body.menu-open a.plus {
 	    display: block;
 	    position: relative;
 	    -webkit-tap-highlight-color: rgba(0,0,0,0);
-	    .transition (all .3s linear);
+	    .transition (all 0s linear);
 	    &:hover, &:active, &.active, &:focus {
 		   color: @white; 
 	    }
