--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ body.menu-open a.plus {
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.6);
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-#menu ul li:hover {
+#menu ul li:active {
   -webkit-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
   box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
@@ -496,13 +496,13 @@ body.menu-open a.plus {
   -moz-box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.04);
   box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.04);
 }
-#menu ul li::first-child:hover,
-#menu ul li::last-child:hover {
+#menu ul li::first-child:active,
+#menu ul li::last-child:active {
   -webkit-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
   box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
 }
-#menu ul li:hover + li {
+#menu ul li:active + li {
   -webkit-box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.06);
   -moz-box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.06);
   box-shadow: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.06);
@@ -517,7 +517,6 @@ body.menu-open a.plus {
   -o-transition: all 0s linear;
   transition: all 0s linear;
 }
-#menu ul li a:hover,
 #menu ul li a:active,
 #menu ul li a.active,
 #menu ul li a:focus {
@@ -700,7 +699,8 @@ section#content .container {
 }
 section#intro {
   background: #303030;
-  border: 1px solid #313131;
+  border-top: 1px solid #414141;
+  border-bottom: 1px solid #313131;
   margin-bottom: 10px;
 }
 section#intro .greeting {
